--- a/styles/home.scss
+++ b/styles/home.scss
@@ -65,6 +65,10 @@
       overflow: hidden;
       margin: 5px;
       padding: 0 10px;
+
+      &.message-username-anon {
+        color: red;
+      }
     }
 
     .message-content {
